[package]
name = "solana_fellowship"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base58 = "0.2"
base64 = "0.21"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
rand = "0.8"
tower-http = { version = "0.5", features = ["cors"] }
